--- a/ex3.html
+++ b/ex3.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <div class="wall top"></div>
-    <div class="wall left"></div>
-    <div class="wall right"></div>
-    <div class="wall bottom"></div>
+    <div class="wall top solid"></div>
+    <div class="wall left solid"></div>
+    <div class="wall right solid"></div>
+    <div class="wall bottom solid"></div>
 
-    <div class="point"></div>
-    <div class="point"></div>
-    <div class="point"></div>
-    <div class="point"></div>
-    <div class="point"></div>
+    <div class="point solid "></div>
+    <div class="point solid "></div>
+    <div class="point solid "></div>
+    <div class="point solid "></div>
+    <div class="point solid "></div>
 
     <div id="player"></div>
 
